<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="myInfo" type="com.example.lab4.MyInfo"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".InformacionFragment">
        <TextView
                style="@style/TitleStyle"
                android:id="@+id/article_heading"
                android:text="@string/info_title1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        <ScrollView
                android:layout_width="match_parent"
                android:layout_below="@id/article_heading"
                android:id="@+id/Scroll"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="76dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TextView
                        style="@style/SubtitleStyle"
                        android:id="@+id/article_subheading"
                        android:text="@string/article_subtitle1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBaseline_toBaselineOf="@+id/article"/>

                <TextView
                        style="@style/TextStyle"
                        android:id="@+id/article"
                        android:text="@string/info_text1"
                        android:autoLink="web"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/article_subheading"
                        android:layout_width="272dp"/>

                <Button
                        style="@style/ButtonStyle"
                        android:id="@+id/addComentario"
                        android:text="@string/add_comment"
                        android:layout_marginEnd="24dp"
                        android:layout_marginStart="24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/article"
                        android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/comentario" app:layout_constraintStart_toEndOf="@+id/addComentario"
                        android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="16dp" app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintTop_toBottomOf="@+id/article" android:layout_marginTop="20dp"
                        android:hint="@string/comment_add"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>