<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context=".InicioFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/inicioConstraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:layout_width="849dp"
                android:layout_height="236dp"
                tools:srcCompat="@mipmap/guat"
                android:id="@+id/imageView"
                android:layout_marginBottom="372dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:cropToPadding="true"
                android:adjustViewBounds="true"/>

        <TextView
                android:text="@string/text_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:padding="20dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/background_light"
                android:background="@color/colorPrimary"/>
        <TextView
                android:text=""
                android:padding="20dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="262dp"
                android:layout_height="76dp"
                android:id="@+id/textIngresado"
                android:textAlignment="center"
                android:visibility="invisible"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@android:color/background_dark"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintVertical_bias="0.306"/>
        <EditText
                android:layout_width="253dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView"
                app:layout_constraintStart_toEndOf="@+id/textView"
                android:layout_marginStart="20dp"
                android:layout_height="wrap_content"
                android:hint="@string/editText_text"/>
        <Button
                style="@style/ButtonStyle"
                android:text="@string/button1_text"
                android:id="@+id/button1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.994"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"/>
        <Button
                style="@style/ButtonStyle"
                android:text="@string/button2_text"
                android:id="@+id/button2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/button1"
                app:layout_constraintEnd_toStartOf="@+id/button3"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>
        <Button
                style="@style/ButtonStyle"
                android:text="@string/button3_text"
                android:id="@+id/button3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.998"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"/>
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/btn_star"
                android:id="@+id/starButton"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.32"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>